src/test/ui/no_send-enum.stderr
error[E0277]: `NoSend` cannot be sent between threads safely
  --> $DIR/no_send-enum.rs:16:9
   |
LL |     bar(x);
   |     --- ^ `NoSend` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Foo`, the trait `Send` is not implemented for `NoSend`
note: required because it appears within the type `Foo`
  --> $DIR/no_send-enum.rs:8:6
   |
LL | enum Foo {
   |      ^^^
note: required by a bound in `bar`
  --> $DIR/no_send-enum.rs:12:11
   |
LL | fn bar<T: Send>(_: T) {}
   |           ^^^^ required by this bound in `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
